--- a/work_space/templates/work_space/work_space.html
+++ b/work_space/templates/work_space/work_space.html
@@ -88,6 +88,9 @@
     </form>
   </div>
 
+  <div class="success_message" id="success_message_id"></div>
+  <div class="error_message" id="error_message_id"></div>
+
   <script src={% static "js/jquery/jquery-3.7.1.min.js" %}></script>
   <script src={% static "js/jquery-ajax.js" %}></script>
 </body>
