--- a/work_space/templates/work_space/new-button.html
+++ b/work_space/templates/work_space/new-button.html
@@ -1,1 +1,4 @@
-<button class="file_button" type="button">{{ file }}</button>
+{% load static %}
+
+<button class="file_button" id="{{ note.label }}_id" type="button">{{ note.label }}</button>
+
