--- a/work_space/templates/work_space/right_panel.html
+++ b/work_space/templates/work_space/right_panel.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="bottom_right_panel" id="panel_id">
+<div class="bottom_right_panel" id="{{ panel_id }}">
   <form action="#" method="post">
       <div class="input-field">
         <textarea class="label_field" type="textarea" name="label">{{ note.label }}</textarea>
